--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@
 			<version>2.4</version>
 		</dependency>
 		
+		<!-- ajax -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
